# techlearning

./: REAME.md  pyproject.toml
Andrew-Ng-Stanford-ML-Course/: README.md
Andrew-Ng-Stanford-ML-Course/machine-learning-ex4/: token.mat
Andrew-Ng-Stanford-ML-Course/machine-learning-ex5/: token.mat
Andrew-Ng-Stanford-ML-Course/machine-learning-ex6/: token.mat
Andrew-Ng-Stanford-ML-Course/machine-learning-ex8/: token.mat
Learning-Data-Analytics/: README.md
Learning-JESS/: .project  README.md
Learning-JESS/src/: HelloJess.clp  JessRunner.java
a_tour_of_c++/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
a_tour_of_c++/src/memory/: main.cpp
a_tour_of_c++/src/types/: main.cpp
cmake/: Dockerfile  build_docker.sh  enter_docker.sh
cmake/simple/: CMakeLists.txt  simple.cpp
opencv/: opencv.py
python/: derek_banas_python_new.py  garbage_collection.py  lambda_expressions.py  list_comprehensions.py  map_reduce.py  raymond_hettinger.py  readme.md
python-singletons/: singletons.py
ros2/: Dockerfile  compose.yaml  ros_entrypoint.sh
ros2/.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
rust/: Dockerfile  README.md  build_docker_image.sh  run_docker_container.sh
rust/rust-cpp/: Cargo.toml
vi/: .vimrc
web/: README.md
web/css_tut/: index.html
web/html_tut/: blog.html  index.html
web/js/: index.html  js.md  script.js
web/js_nn_tut/: index.html  main.js
web/js_tut/: index.html  index_tm.html  main.js
web/materialize_tm_website_tut/: index.html  main.js
web/materialize_tut/: index.html  index2.html
(+73 files in other folders)
