[tool.poetry]
name = "repl_python3_techlearning"
version = "0.1.0"
description = ""
authors = ["chris24s <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas-datareader = "^0.10.0"
Quandl = "^3.7.0"
opencv-python = "^4.5.5"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
